kubernetes/applications/bentopdf/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bentopdf-svc
  namespace: apps
  labels:
    app: bentopdf
spec:
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
  selector:
    app: bentopdf
