kubernetes/applications/bentopdf/http-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bentopdf-http-route
  namespace: apps
  annotations:
    gethomepage.dev/description: A Privacy First PDF Toolkit
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Utilities
    gethomepage.dev/icon: https://raw.githubusercontent.com/alam00000/bentopdf/main/public/images/favicon-no-bg.svg
    gethomepage.dev/name: BentoPDF
    gethomepage.dev/pod-selector: "app=bentopdf"
  labels:
    app: bentopdf
spec:
  parentRefs:
    - name: internal-gateway
      namespace: kube-system
  hostnames:
    - "pdf.mcmumf.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: bentopdf-svc
          port: 8080
